--- a/packages/components/src/components/data-table/data-table.scss
+++ b/packages/components/src/components/data-table/data-table.scss
@@ -18,7 +18,6 @@ $header-height: 52px;
         padding: 0.75em;
         display: flex;
         align-items: center;
-        word-break: break-word;
 
         &:first-child {
             padding-left: 0;
